styles.css
@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap");

html {
    box-sizing: border-box;
    height: 100%;
}

*, *::after, *::before {
    box-sizing: inherit;
    padding: 0;
    margin: 0;
    text-decoration: none;
}

a {
    color: coral;
}

button {
    border: none;
}

body {
    background: #606c88;
    background: -webkit-linear-gradient(to right, #3f4c6b, #606c88);
    background: linear-gradient(to right, #3f4c6b, #606c88);
    display: flex;
    flex-direction: column;
    height: 100%;
}

h1 {
    display: flex;
    gap: 10px;
    justify-content: center;
    margin: 10px;
    color: rgba(196, 189, 146, 0.87);
    font-family: "Barlow Condensed";
}

h1 img {
    width: 48px;
}

main {
    align-self: center;
    flex-grow: 1;
    width: 100%;
    max-width: 97%;
}

footer {  
    padding: 10px;
    text-align: center;
    display: flex;
    flex-direction: column;
}

footer h4 {
    font-family: "Barlow Condensed", sans-serif;
    font-size: larger;
}

footer a {
    font-family: "Barlow Condensed";
}

.footer-links {
    display: flex;
    justify-content: space-around;
    gap: 10px;
}

.container {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.new-book-btn {
    height: 50px;
    align-self: center;
    margin: 20px;
    background-color: transparent;
}

.new-book-btn img {
    width: 36px;
}

.new-book-btn:hover {
    transform: scale(1.2);
}

.new-book-btn:active {
    transform: scale(1.0);
}

.bk-container {
    background-color: rgba(255, 192, 203, 0.288);
    height: 100%;
    border-radius: 10px;
    padding: 7px;
    font-family: "Barlow Condensed";
    display: flex;
    flex-wrap: wrap;
    align-content: flex-start;
    gap: 10px;
}

.bk-instance {
    flex-basis: 7em;    
    border-radius: 5px;
    background-color: lightcoral;
    display: flex;
    flex-direction: column;
}

.bk {
    padding: 0 3px;
    height: 93%;
    border-radius: 5px;
    background-color: rgba(128, 128, 128, 0.884);
    display: flex;
    flex-direction: column;
    align-items: center;
}

.bk h4 {
    text-align: center;
    margin: 5px;
    font-size: larger;
    width: 100%;
}

.bk button {
    border: 1px solid rgb(204, 224, 231);
    border-radius: 5px;
    background-color: lightsteelblue;
    padding: 5px;
    margin: 17px 10px 10px 10px;
    font-family: "Barlow Condensed";
    font-size: larger;
}

.bk button:hover {
    background-color: rgba(176, 196, 222, 0.61);
}

.bk button:active {
    background-color: lightsteelblue;
}

.bk-pages {
    font-style: oblique;
    margin-top: 5px;
}

.del-bk-instance {
    background-color: transparent;
    align-self: center;
    height: 18px;
}

.del-bk-instance img {
    width: 18px;
}

.new-book-container {
    display: none;
    justify-content: center;
    align-items: center;
    position: fixed;
    top: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.301);
    width: 100%;
    height: 100%;
    font-family: sans-serif;
}

.new-book-form {
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1em;
    width: max-content;
    padding: 10px;
    background-color: rgba(216, 190, 190, 0.911);
}

.add-book-btn {
    padding: 10px;
    border: 1px solid lightcoral;
    border-radius: 5px;
    background-color: transparent;
    font-size: medium;
    font-family: "Barlow Condensed";
}

.add-book-btn:hover {
    background-color: rgba(240, 128, 128, 0.616);
}

.add-book-btn:active {
    background-color: rgba(240, 128, 128, 0.849);
}

.new-book-form-header {
    font-family: "Barlow Condensed";
    font-size: x-large;
    display: flex;
    width: 100%;
}

.new-book-form-header img {
    width: 18px;
}

.new-book-form-header button {
    padding: 0;
    background-color: transparent;
}

.new-book-form h3 {
    flex-grow: 1;
    text-align: center;
    color: rgb(80, 74, 74);
}

.new-book-form-content label, .new-book-form-content input {
    display: block;
}

.new-book-form-content label {
    text-align: center;
    margin: 15px;
    font-family: "Barlow Condensed";
    font-size: larger;
    color: #343c4e;
}

.new-book-form-content input {
    border: none;
    background-color: #a18f8fa9;
    padding: 5px;
    margin-top: 5px;
}

.bk-status {
    margin-top: 5px;
}

.bk-status label, .bk-status input {
    display: inline;
}

